[tool.poetry]
name = "json_ex"
version = "0.1.0"
description = "Example of json usage"
authors = ["Anton Kachurin <katchuring@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
robotframework = "^3.1"
requests = "^2.21"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
